Fix wrapping on multiline fields

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -60,7 +60,7 @@ textarea {
 }
 
 .multiline {
-	white-space: pre;
+	white-space: pre-wrap;
 }
 
 .dropdown-many {
